--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
-builder = "dockerfile"
+builder = "nixpacks"
 sourceDir = "backend"
 
 [deploy]
-# Let Dockerfile handle the start command
+startCommand = "python run.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
