--- a/railway.toml
+++ b/railway.toml
@@ -3,5 +3,6 @@ builder = "nixpacks"
 sourceDir = "backend"
 
 [deploy]
+startCommand = "python /app/run.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
