--- a/railway.toml
+++ b/railway.toml
@@ -3,6 +3,6 @@ builder = "nixpacks"
 sourceDir = "backend"
 
 [deploy]
-startCommand = "python /app/run.py"
+startCommand = "python minimal_test_app.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
