--- a/railway.toml
+++ b/railway.toml
@@ -6,3 +6,5 @@ sourceDir = "backend"
 startCommand = "python ./run.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+
+# Force redeploy trigger
