--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,8 @@
 [build]
-builder = "nixpacks"
+builder = "dockerfile"
 sourceDir = "backend"
 
 [deploy]
-startCommand = "python ./run.py"
+# Let Dockerfile handle the start command
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
-
-# Force redeploy trigger
