--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,4 +27,4 @@ COPY src/ ./src/
 EXPOSE 8080
 
 # Run the FastAPI app with uvicorn using Railway's PORT env var
-CMD ["sh", "-c", "python run.py"]
+CMD ["sh", "-c", "python minimal_debug_app.py"]
