--- a/nixpacks-mcp.toml
+++ b/nixpacks-mcp.toml
@@ -1,13 +1,13 @@
 # Nixpacks configuration for MCP service
 [phases.setup]
-nixPkgs = ["python311", "pip"]
+nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
     "cd backend",
-    "pip install mcp httpx pydantic python-dotenv"
+    "python3 -m pip install mcp httpx pydantic python-dotenv"
 ]
 
 [start]
-cmd = "cd backend && python mcp_server.py"
+cmd = "cd backend && python3 mcp_server.py"
 
