--- a/backend/railway-mcp-service.toml
+++ b/backend/railway-mcp-service.toml
@@ -6,11 +6,11 @@ builder = "NIXPACKS"
 
 [build.nixpacksPlan]
 phases.install.cmds = [
-    "pip install mcp httpx pydantic python-dotenv"
+    "python3 -m pip install mcp httpx pydantic python-dotenv"
 ]
 
 [deploy]
-startCommand = "python mcp_server.py"
+startCommand = "python3 mcp_server.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
