--- a/nixpacks-mcp.toml
+++ b/nixpacks-mcp.toml
@@ -1,10 +1,12 @@
 # Nixpacks configuration for MCP service
 [phases.setup]
-nixPkgs = ["python311"]
+nixPkgs = ["python311", "python311Packages.pip"]
 
 [phases.install]
 cmds = [
     "cd backend",
+    "python3 -m ensurepip --default-pip || true",
+    "python3 -m pip install --upgrade pip",
     "python3 -m pip install mcp httpx pydantic python-dotenv"
 ]
 
