--- a/nixpacks-mcp.toml
+++ b/nixpacks-mcp.toml
@@ -1,13 +1,12 @@
 # Nixpacks configuration for MCP service
+# Nixpacks auto-detects Python and uses pip if requirements.txt exists
+
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip"]
+nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
-    "cd backend",
-    "python3 -m ensurepip --default-pip || true",
-    "python3 -m pip install --upgrade pip",
-    "python3 -m pip install mcp httpx pydantic python-dotenv"
+    "cd backend && pip install -r requirements-mcp-minimal.txt"
 ]
 
 [start]
