--- a/backend/railway.mcp.toml
+++ b/backend/railway.mcp.toml
@@ -1,13 +1,12 @@
 # Railway config for MCP service
-# Uses lightweight Dockerfile.mcp and installs MCP at runtime
+# Uses same Dockerfile as main app, but overrides start command to run MCP server
 
 [build]
 builder = "dockerfile"
 sourceDir = "backend"
-dockerfilePath = "Dockerfile.mcp"
 
 [deploy]
-startCommand = "pip install mcp httpx && python3 mcp_server.py"
+startCommand = "pip install mcp httpx pydantic python-dotenv && python3 mcp_server.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
