--- a/railway.mcp.toml
+++ b/railway.mcp.toml
@@ -6,7 +6,7 @@ dockerfilePath = "backend/Dockerfile.mcp"
 # Do NOT set sourceDir
 
 [deploy]
-startCommand = "pip install -r backend/requirements-mcp-minimal.txt && python3 backend/mcp_server.py"
+startCommand = "pip install --no-cache-dir -r requirements-mcp-minimal.txt && python3 mcp_server.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
